# LOD2d-CPP

./: .gitignore  BENCHMARK_GUIDE.md  CMakeLists.txt  DEVELOPMENT.md  README.md
benchmarks/: CMakeLists.txt  bench_H4h8.cpp  bench_H4h9.cpp  bench_inverse_inequality.cpp  bench_profile.cpp  bench_refine.cpp  bench_reuse_rhs.cpp  bench_saddle_h3h10.cpp  data_H4h8.txt
include/fem/: assemble_dg.h
include/lod/: corrector.h  lod_model.h  patches.h  quasi_interp.h
include/mesh/: refine.h  types.h
include/solver/: cholmod_wrapper.h  coarse_solve.h  lod_reuse.h
results/inverse_inequality/: inverse_H3_ell2_lod_unit_h12-12.csv  inverse_H3_ell2_lod_unit_h6-12.csv
scripts/: run_inverse_server.sh
src/: main.cpp
src/fem/: assemble_dg.cpp
src/lod/: corrector.cpp  lod_model.cpp  patches.cpp  quasi_interp.cpp
src/mesh/: edges.cpp  refine.cpp
src/solver/: coarse_solve.cpp  lod_reuse.cpp
tests/: CMakeLists.txt  debug_cholmod.cpp  golden_corr.txt  golden_dg.txt  golden_full.txt  golden_mesh.txt  golden_nvb.txt  golden_patch.txt  golden_qi.txt  test_corr.cpp  test_dg.cpp  test_full.cpp  test_golden.cpp  test_mesh.cpp  test_nvb.cpp  test_patch.cpp  test_qi.cpp
